Minor text spacing fixes

--- a/stub/static/content-blocks/onoffswitch.scss
+++ b/stub/static/content-blocks/onoffswitch.scss
@@ -6,7 +6,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    padding: 0 calc((32px - 24px) / 2 - 3px);
+    padding: 0 calc((32px - 24px) / 2 - 2px);
 
     &_checked {
         justify-content: flex-end;
