--- a/stub/static/content-blocks/product.scss
+++ b/stub/static/content-blocks/product.scss
@@ -8,7 +8,7 @@
     }
 
     &__title {
-        margin-bottom: var(--space-xxxxl);
+        margin-bottom: var(--space-xxxl);
     }
 
     &__footer {
